F matrix test in progress

--- a/exercise6/Exercise 6 - Two-view Geometry/triangulation/CMakeLists.txt
+++ b/exercise6/Exercise 6 - Two-view Geometry/triangulation/CMakeLists.txt
@@ -9,6 +9,10 @@ find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 # target_link_libraries( main ${OpenCV_LIBS} )
 # target_link_libraries (main Eigen3::Eigen)
 
-add_executable( triangualte_test triangualte_test.cpp Triangulate.cpp)
-target_link_libraries( triangualte_test ${OpenCV_LIBS} )
-target_link_libraries (triangualte_test Eigen3::Eigen)
+# add_executable( triangualte_test triangualte_test.cpp Triangulate.cpp)
+# target_link_libraries( triangualte_test ${OpenCV_LIBS} )
+# target_link_libraries (triangualte_test Eigen3::Eigen)
+
+add_executable( 8_point_test 8_point_test.cpp Triangulate.cpp)
+target_link_libraries( 8_point_test ${OpenCV_LIBS} )
+target_link_libraries (8_point_test Eigen3::Eigen)
