--- a/exercise4/exercise04/sift/.vscode/settings.json
+++ b/exercise4/exercise04/sift/.vscode/settings.json
@@ -70,7 +70,15 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "clocale": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "strstream": "cpp",
+        "condition_variable": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "thread": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
