--- a/exercise4/exercise04/sift/CMakeLists.txt
+++ b/exercise4/exercise04/sift/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.0)
 project( sift )
 set (CMAKE_CXX_STANDARD 11)
 find_package( OpenCV REQUIRED )
-add_executable( main main.cpp Sift.cpp)
+add_executable( main main.cpp Sift.cpp Utils.cpp)
 target_link_libraries( main ${OpenCV_LIBS} )
